<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.openxcell.ui.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        app:snackBar="@{viewModel.errorLiveData}"
        app:hideKeyBord="@{viewModel.hideKeyBordObservable}">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/AppTextInput"
            app:errorText="@{viewModel.emailError}"
            app:layout_constraintBottom_toTopOf="@+id/textInputPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppEditText"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTextInput"
            android:hint="@string/password"
            app:errorText="@{viewModel.passwordError}"
            app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
            app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/AppEditText"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSubmit"
            style="@style/AppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::submit}"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_singup_label"
            app:layout_constraintEnd_toEndOf="@+id/textInputPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_singup_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:textColor="@color/text_black"
            android:text="@string/don_t_have_account"
            app:layout_constraintBottom_toTopOf="@+id/guide_line_bottom"
            app:layout_constraintEnd_toStartOf="@+id/text_view_singup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:paddingStart="@dimen/_2sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/sign_up_here"
            android:textColor="@color/text_black"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintBottom_toTopOf="@+id/guide_line_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_singup_label" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>